syntax = "proto3";

package book;

service BookService {
  rpc GetBook (GetBookRequest) returns (Book);
  rpc ListBooks (ListBooksRequest) returns (ListBooksResponse);
  rpc CreateBook (CreateBookRequest) returns (Book);
  rpc UpdateBook (UpdateBookRequest) returns (Book);
  rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);
}

message Book {
  int32 id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 publish_year = 5;
}

message GetBookRequest {
  int32 id = 1;
}

message ListBooksRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListBooksResponse {
  repeated Book books = 1;
  int32 total = 2;
}

message CreateBookRequest {
  string title = 1;
  string author = 2;
  string isbn = 3;
  int32 publish_year = 4;
}

message UpdateBookRequest {
  int32 id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 publish_year = 5;
}

message DeleteBookRequest {
  int32 id = 1;
}

message DeleteBookResponse {
  bool success = 1;
}
